--- a/style.css
+++ b/style.css
@@ -263,3 +263,28 @@ body {
     border-radius: 8px;
     padding: 6px 22px;
 }
+
+.team-list {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.section-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section-team-title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.section-work-title {
+    margin-bottom: 50px;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+}
