--- a/style.css
+++ b/style.css
@@ -303,3 +303,11 @@ body {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
+.nav-list-item:hover, .nav-list-item:focus {
+    color: aqua;
+}
+
+.current {
+    color: #2196F3;
+}
