--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ body {
 }
 
 /* Header */
-
 .header {
     padding-top: 24px;
     padding-bottom: 25px ;
@@ -90,6 +89,11 @@ letter-spacing: 0.78px;
     display: flex;
     gap: 50px;
     align-items: center;
+}
+
+.contacts-link:hover,
+.nav-link:hover {
+    color: #2196F3;
 }
 
 .nav-link {
