--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,14 @@ line-height: 1.14;
 letter-spacing: 0.28px;
 }
 
+.header-link:hover {
+    color: var(--logo);
+font-size: 14px;
+font-weight: 500;
+line-height: 1.14;
+letter-spacing: 0.28px;
+}
+
 /* секція герой */
 
 .hero {
@@ -309,6 +317,7 @@ letter-spacing: 0.48px;
 
     .addres {
         margin-top: 20px;
+        font-style: normal;
     }
 
 .footer-addres {
