--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ img {
 /* Якщо буде погано виглядати видалити container */
 .container {
     width: 1200px;
-    outline: solid red;
+    /* outline: solid red; */
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -128,8 +128,10 @@ letter-spacing: 0.28px;
 .hero {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-color: var(--footer);
     text-align: center;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../img/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .hero-title {
