--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --addres-list-link:#FFFFFF99;
     --footer:#2F303A;
     --team:#F5F4FA;
+    --media:#AFB1B8;
 }
 
 body {
@@ -107,7 +108,38 @@ letter-spacing: 0.28px;
     align-items: center;
 }
 
+.header-item {
+    margin-bottom: 0;
+    margin-right: 30px;
+}
+
 .header-link {
+    gap: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.header-link:hover {
+    .header-contact {
+        fill: var(--logo);
+    }
+    .header-cont {
+        color: var(--logo);
+    }
+}
+
+.header-contact {
+fill: var(--contacts-list-link);
+width: 16px;
+height: 12px;
+}
+
+.header-item:nth-child(2) .header-contact {
+    width: 10px;
+    height: 16px;
+}
+
+.header-cont {
 color: var(--contacts-list-link);
 font-size: 14px;
 font-weight: 500;
@@ -115,7 +147,7 @@ line-height: 1.14;
 letter-spacing: 0.28px;
 }
 
-.header-link:hover {
+.header-cont:hover {
     color: var(--logo);
 font-size: 14px;
 font-weight: 500;
@@ -160,6 +192,7 @@ padding: 10px 32px;
 border-radius: 4px;
 border: none;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+cursor: pointer;
 }
 
 /* секція фютчерс */
@@ -272,7 +305,7 @@ margin-bottom: 50px;
 
 .team-box {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 16px;
 }
 
 .team-caption {
@@ -292,6 +325,74 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.18;
 letter-spacing: 0.48px;
+}
+
+.social {
+    justify-content: center;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.team-link:hover {
+    background-color: var(--logo);
+    .team-svg {
+        fill: var(--white);
+    }
+}
+
+.team-link {
+    width: 44px;
+    height: 44px;
+    padding: 12px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-svg {
+    fill: var(--media);
+}
+
+.clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.clients-title {
+    color: var(--nav-list-link);
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.16;
+letter-spacing: 1.08px;
+margin-bottom: 50px;
+}
+
+.client-list{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+
+.client-link {
+    padding: 16px 32px;
+    border-radius: 4px;
+border: 1px solid var(--media);
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.client-link:hover {
+border: 1px solid var(--logo);
+}
+
+.client-icon {
+    fill: var(--media);
+    width: 106px;
+    height: 60px;
 }
 
 /* фоотер */
