--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,33 @@ margin-bottom: 50px;
     gap: 30px;
 }
 
+.work-item {
+    position: relative;
+}
+
+.work-box {
+    background: rgba(47, 48, 58, 0.80);
+    width: 370px;
+height: 70px;
+display: flex;
+justify-content: center;
+align-items: center;
+padding-top: 27px;
+padding-bottom: 27px;
+position: absolute;
+bottom: 0;
+}
+
+.work-text {
+    color: var(--white);
+text-align: center;
+font-size: 14px;
+font-weight: 700;
+line-height: 1.14;
+letter-spacing: 0.42px;
+text-transform: uppercase;
+}
+
 /* секція команда */
 
 .team {
