--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ img {
     padding-top: 24px;
     padding-bottom: 25px;
     border-bottom: solid 1px var(--line);
+    /* Чомусь не працює */
 }
 
 .header .container{
