--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,65 @@ margin-bottom: 20px;
 height: 20px;
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+  }
+  
+  .modal {
+    width: 500px;
+    height: 600px;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+  }
+  
+  .modal-title {
+    text-align: center;
+    color: var(--nav-list-link);
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+line-height: 1.15;
+letter-spacing: 0.6px;
+}
+  
+  .modal-input {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding-left: 40px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    padding-right: 11px;
+  }
+  
+  .modal-coment {
+    display: block;
+    width: 100%;
+    height: 140px;
+  }
+  
+  .modal-box {
+    position: relative;
+  }
+  
+  .modal-svg {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+  }
+
 .current {
     color: var(--logo);
 }
