--- a/css/style.css
+++ b/css/style.css
@@ -534,57 +534,170 @@ height: 20px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.20)) ;
+    opacity: 1;
+  }
+  
+  .is-hidden {
+    opacity: 0;
+    pointer-events: none;
   }
   
   .modal {
-    width: 500px;
-    height: 600px;
-    background-color: #fff;
+  padding: 40px ;
+  background-color: var(--white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  }
+  
+  .model-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: transparent;
+    padding: 6px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 40px;
+    top: 14px;
+    right: 14px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+  }
+  
+  .btn-svg {
+    width: 18px;
+    height: 18px;
+  }
+  
+  .btn-svg:hover {
+    fill: var(--logo);
+    cursor: pointer;
   }
   
   .modal-title {
-    text-align: center;
     color: var(--nav-list-link);
-text-align: center;
-font-size: 20px;
-font-weight: 700;
-line-height: 1.15;
-letter-spacing: 0.6px;
-}
-  
-  .modal-input {
-    display: block;
-    width: 100%;
-    height: 50px;
-    padding-left: 40px;
-    padding-top: 11px;
-    padding-bottom: 11px;
-    padding-right: 11px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.6px;
+  text-align: center;
+  margin-bottom: 12px;
   }
   
-  .modal-coment {
+  .modal-lab {
+    color: var(--contacts-list-link);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.12px;
+  border: none;
+  }
+  
+  .modal-inp {
     display: block;
-    width: 100%;
-    height: 140px;
+    width: 448px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.10);
+  padding: 12px 12px 12px 42px;
+  margin-bottom: 10px;
+  margin-top: 4px;
+  outline: none;
+  }
+  
+  .modal-inp:hover {
+  border: none;
+  }
+  
+  
+  .model-coment {
+    display: block;
+    width: 448px;
+  height: 120px;
+  border-radius: 4px;
+  border-color: rgba(0, 0, 0, 0.10);
+  padding: 12px 16px;
+  margin-bottom: 25px;
+  resize: none;
+  margin-top: 4px;
+  outline: none;
   }
   
   .modal-box {
-    position: relative;
+  position: relative;
   }
   
-  .modal-svg {
+  .modal-box:hover, .modal-box:focus {
+    .modal-inp {
+      border: 1px solid var(--logo);
+    }
+    .model-svg {
+      fill: var(--logo);
+    }
+  }
+  
+  .model-svg {
+    width: 18px;
+    height: 18px;
+    top: 53%;
+    left: 12px;
     position: absolute;
-    top: 50%;
-    left: 15px;
+  }
+  
+  .modal-us {
+    width: 18px;
+    height: 18px;
+  }
+  
+  .modal-chek {
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+  }
+  
+  .check {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 34px;
+  }
+  
+  .check-text {
+    color: var(--contacts-list-link);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
+  width: 400px;
+  }
+  
+  .check-link {
+    color: var(--logo);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
+  text-decoration-line: underline;
+  }
+
+.btn {
+    text-align: center;
+  }
+  
+  .check-btn {
+    color: var(--white);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.96px;
+  padding: 10px 53px;
+  border-radius: 4px;
+  background: var(--logo);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+  cursor: pointer;
   }
 
 .current {
