--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,52 @@ margin-bottom: 20px;
 height: 20px;
 }
 
+.newsletter-form {
+    display: flex;
+}
+
+.newsletter-label {
+    color: var(--white);
+font-size: 14px;
+font-weight: 700;
+line-height: 1.14;
+letter-spacing: 0.42px;
+text-transform: uppercase;
+}
+
+.newsletter-input {
+    border-radius: 4px;
+border: 1px solid rgba(255, 255, 255, 0.30);
+background: rgba(33, 150, 243, 0.00);
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+width: 358px;
+height: 50px;
+padding-left: 16px;
+margin-top: 20px;
+}
+
+.newsletter-button{
+    border-radius: 4px;
+background: #2196F3;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+color: var(--white);
+font-size: 16px;
+font-weight: 700;
+line-height: 1.87; /* 187.5% */
+letter-spacing: 0.96px;
+border: none;
+display: flex;
+align-items: center;
+padding-left: 28px;
+padding-right: 62px;
+}
+
+.newsletter-svg {
+    fill: var(--white);
+    width: 24px;
+height: 24px;
+}
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -648,6 +694,12 @@ height: 20px;
   .modal-us {
     width: 18px;
     height: 18px;
+  }
+
+  .modal-lab:hover, .modal-lab:focus {
+    .model-coment {
+        border: 1px solid var(--logo);
+    }
   }
   
   .modal-chek {
