--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,20 @@ height: 24px;
     }
   }
   
+  .model-btn:hover, .model-btn:focus {
+    .btn-svg {
+      fill: var(--logo);
+    }
+  }
+
+.modal-inp:hover, .modal-inp:focus {
+    border-color: var(--logo);
+  }
+  
+  .modal-inp:hover + .model-svg, .modal-inp:focus + .model-svg {
+    fill: var(--logo); 
+    }
+    
   .modal-chek {
     width: 16px;
     height: 16px;
