--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ letter-spacing: 0.78px;
     color: var(--logo);
 }
 
+.nav-item {
+    position: relative;
+}
+
 .nav-link {
 color: var(--nav-list-link);
 font-size: 14px;
@@ -781,6 +785,24 @@ height: 24px;
     color: var(--logo);
 }
 
+    .current::after {
+        content: "";
+        width: 100%;
+height: 4px;
+border-radius: 2px;
+background: var(--logo);
+display: block;
+position: absolute;
+top: 48px;
+left: 0;
+box-sizing: border-box;
+    }
+
+    /* .current:last-child::after {
+        width: 78px;
+height: 4px;
+    } */
+
 /* портфоліо */
 
 .portfolio-section {
@@ -831,18 +853,42 @@ flex-shrink: 0; */
 flex-basis: calc((100% - 60px) / 3);
 border: 1px solid #EEE;
 background: #FFF;
+position: relative;
 }
 
 .services-item:hover {
     border: 1px solid #EEE;
     background: #FFF;
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+    .services-paragraph {
+        opacity: 1;
+    }
 }
 
 .services-img {
     display: block;
     width: 100%;
 }
+
+
+
+  .services-paragraph {
+    color: var(--white);
+    font-size: 18px;
+    font-style: 1.55;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+    letter-spacing: 0.54px;
+    padding-top: 63px;
+    padding-bottom: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(33, 150, 243, 0.90);;
+    opacity: 0;
+  }
 
 .services-box {
     padding-top: 20px;
