--- a/css/style.css
+++ b/css/style.css
@@ -791,14 +791,6 @@ height: 24px;
       fill: var(--logo);
     }
   }
-
-  .modal-inp:hover, .modal-inp:focus {
-    border-color: var(--logo);
-    transition-property: border-color ;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-  }
   
   .modal-inp:hover + .model-svg, .modal-inp:focus + .model-svg {
     fill: var(--logo); 
@@ -836,10 +828,6 @@ height: 24px;
 .modal-inp:hover, .modal-inp:focus {
     border-color: var(--logo);
   }
-  
-  .modal-inp:hover + .model-svg, .modal-inp:focus + .model-svg {
-    fill: var(--logo); 
-    }
     
   .modal-chek {
     width: 16px;
@@ -998,7 +986,7 @@ position: relative;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
-    .services-div{
+    .services-paragraph{
       opacity: 1;
        transition-property: opacity;
   transition-duration: 250ms;
