--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,7 @@ border: 1px solid var(--logo);
 
 .client-link:hover, .client-link:focus {
     border: 1px solid var(--logo);
+    outline: none;
   transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -601,6 +602,7 @@ height: 20px;
 .social-link:hover,
  .social-link:focus {
   border-radius: 50%;
+  outline: none;
   background-color: var(--logo);
   transition-property: background-color ;
   transition-duration: 250ms;
@@ -643,6 +645,7 @@ padding-left: 16px;
 margin-top: 20px;
 display: block;
 color: var(--white);
+outline: none;
 }
 
 .newsletter-button{
@@ -665,6 +668,8 @@ justify-content: center;
 align-items: center;
 display: flex;
 gap: 10px;
+cursor: pointer;
+outline: none;
 }
 
 .newsletter-svg {
@@ -708,6 +713,7 @@ height: 24px;
     top: 14px;
     right: 14px;
     border: 1px solid rgba(0, 0, 0, 0.10);
+    outline: none;
   }
   
   .btn-svg {
@@ -833,6 +839,7 @@ height: 24px;
     width: 16px;
     height: 16px;
     margin-right: 8px;
+    outline: none;
   }
   
   .check {
@@ -877,6 +884,7 @@ height: 24px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   border: none;
   cursor: pointer;
+  outline: none;
   }
 
 .current {
