--- a/css/style.css
+++ b/css/style.css
@@ -686,6 +686,10 @@ height: 24px;
     height: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.20)) ;
     opacity: 1;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
   }
   
   .is-hidden {
@@ -1003,6 +1007,20 @@ position: relative;
     }
 }
 
+.services-item {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .services-item:hover .services-paragraph {
+     opacity: 1;
+   transform: translate(0);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-delay: 0;
+    overflow: hidden;
+  }
+
 .services-img {
     display: block;
     width: 100%;
@@ -1024,6 +1042,12 @@ position: relative;
     left: 0;
     background-color: rgba(33, 150, 243, 0.90);;
     opacity: 0;
+    transition-property: color background-color transform;
+  transition-duration: 2s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+  transform: translatey(370px);
+  overflow: hidden;
   }
 
 .services-box {
