--- a/css/style.css
+++ b/css/style.css
@@ -990,8 +990,8 @@ position: relative;
     }
 }
 
-.services-item:hover,
-.services-item:focus {
+/* .services-item:hover,
+.services-item:focus, {
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
     transition-property: box-shadow ;
@@ -1005,14 +1005,23 @@ position: relative;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
     }
-}
+} */
 
-.services-item {
+.services-im {
     position: relative;
     overflow: hidden;
   }
-  
+
   .services-item:hover .services-paragraph {
+    opacity: 1;
+  transform: translate(0);
+   transition-property: transform;
+   transition-duration: 250ms;
+   transition-delay: 0;
+   overflow: hidden;
+ }
+  
+  .services-im:hover .services-paragraph {
      opacity: 1;
    transform: translate(0);
     transition-property: transform;
