--- a/css/style.css
+++ b/css/style.css
@@ -985,6 +985,10 @@ position: relative;
     border: 1px solid #EEE;
     background: #FFF;
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+    transition-property: box-shadow ;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
     .services-paragraph {
         opacity: 1;
     }
